--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/bootstrap": "^5.2.10",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
@@ -18,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "yup": "^1.6.1"
   },
